wp.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wp
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wp
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: con-wordpress
        image: wordpress
        volumeMounts:
        - name: wp-pvc-deploy
          mountPath: "/var/www/html"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
      volumes:
      - name: wp-pvc-deploy
        persistentVolumeClaim:
          claimName: wp-pvc
