ingress-wp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost
  namespace: gh
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ghost.home
    http:
      paths:
      - path: /ghost
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 2368
  ingressClassName: nginx
